added jlink and jpackage to build file. added module-info.